# obsidian-brain

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cli.py  phase_a_apply_and_commit_guide.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
brain/: chunker.py  cli.py  config.py  db.py  exceptions.py  ingest.py  llm.py  retriever.py  utils.py  watcher.py
brain/commands/: chat.py  digest.py  init.py  related.py  summarize.py  tag.py
obsidian_brain/: pyvenv.cfg
tests/: conftest.py  test_chunker.py  test_digest.py  test_ingest.py  test_related.py  test_retriever.py  test_summarize.py  test_tag.py  test_utils.py
